--- a/lib/globals.css
+++ b/lib/globals.css
@@ -24,7 +24,7 @@ body {
 }
 
 button {
-  @apply border border-gray-500 px-4 py-2 rounded-md cursor-pointer h-auto;
+  @apply border border-gray-500 px-4 py-2 rounded-md cursor-pointer;
 }
 
 .button-primary {
